# ssbh_editor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  README.md  format_dependencies.dot  presets.json  ssbh_editor_config.txt
.github/workflows/: release.yml  rust.yml
src/: app.rs  capture.rs  editors.rs  lib.rs  log.rs  main.rs  material.rs  model_folder.rs  path.rs  preferences.rs  presets.rs  render_settings.rs  thumbnail.rs  update.rs  validation.rs  widgets.rs
src/app/: anim_list.rs  animation_bar.rs  file_list.rs  icon.rs  menu.rs  rendering.rs  shortcut.rs  swing_list.rs  window.rs
src/app/window/: camera.rs  device_info.rs  log.rs  new_release.rs  preferences.rs  render_settings.rs  stage_lighting.rs
src/editors/: adj.rs  anim.rs  hlpb.rs  matl.rs  mesh.rs  meshex.rs  modl.rs  nutexb.rs  skel.rs
src/fonts/: emoji_license.txt
src/widgets/: dragslider.rs
