[package]
name = "ssbh_editor"
version = "0.10.8"
authors = ["SMG"]
edition = "2021"
description = "View, edit, and validate models for Smash Ultimate"

[dependencies]
chrono = "0.4"
egui = { version = "0.32.0", default-features = false }
egui_extras = { version = "0.32.0", features = ["svg"] }
egui-wgpu = "0.32.0"
egui_plot = "0.33.0"
eframe = { version = "0.32.0", default-features = false, features = ["wayland", "x11", "wgpu"] }
egui_dnd = "0.13.0"
egui_commonmark = "0.21.0"
wgpu = "25.0.0"
glam = { version = "0.28.0", features = ["mint", "bytemuck", "serde"] }
rfd = "0.14.1"
ssbh_wgpu = { git = "https://github.com/ScanMountGoat/ssbh_wgpu" }
nutexb_wgpu = { git = "https://github.com/ScanMountGoat/ssbh_wgpu" }
ssbh_data = { version = "0.19.0", features = ["strum", "serde"] }
strum = "0.24.1"
nutexb = "0.7.0"
octocrab = "0.43.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
open = "5.2.0"
log = "0.4.17"
serde_json = "1.0"
strip-ansi-escapes = "0.2.0"
image = "0.25.1"
directories = "6.0"
once_cell = "1.13.0"
serde = { version = "1.0", features = ["derive"] }
xmltree = "0.10.3"
anyhow = "1.0"
thiserror = "1.0"
futures-intrusive = "0.4.0" # TODO: Avoid these dependencies?
futures = "0.3"
pico-args = "0.5.0"
reqwest = { version = "0.12.5", features = ["blocking"] }
approx = "0.5.1"

[profile.release-lto]
inherits = "release"
strip = "debuginfo"
lto = true

[package.metadata.bundle]
identifier = "ssbh_editor"
icon = ["src/icons/SsbhEditor512_mac.png"]
